--- a/index.html
+++ b/index.html
@@ -123,24 +123,25 @@
         <div class="container mx-auto flex flex-col-reverse lg:flex-row items-center justify-between space-y-8 lg:space-y-0 lg:space-x-8">
             <!-- Left Side: Text Content -->
             <div class="w-full lg:w-1/2 text-center lg:text-left">
-                <h3 class="text-gray-500 font-semibold mb-2 text-sm">CV Putra Karo Mandiri</h3>
+                <h3 class="text-gray-500 font-semibold mb-2 text-sm">Eastside Agro industry</h3>
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4 leading-tight">
-                    Roasted Bean & <br> Green Bean
+                    Get to Know Us & <br> Our Story
                 </h2>
                 <p class="text-gray-600 text-sm sm:text-base mb-6 max-w-lg">
-                    CV Putra Karo Mandiri is a coffee producer in Medan, Indonesia, offering premium Arabica and Robusta beans. We source the finest coffee from trusted farmers to meet the needs of local and international markets.
-                </p>
+
+EastSide Agro Industry PLC was established in Ethiopia under the commercial registration and business license proclamation number 980/2016 so as to contribute in the Agro Processing and Import-Export business in the most ethical and professional style. We mainly focus on growing and exporting original Ethiopian Coffee with maximum care for quality and novelty.                </p>
                 <!-- Expanded Text Content -->
                 <div id="expandedTextContent" class="text-gray-700 text-base leading-relaxed max-w-lg mx-auto lg:mx-0">
                     <p class="mb-4">
-                        At CV Putra Karo Mandiri, our passion for coffee runs deep. We are dedicated to cultivating and sourcing the highest quality Arabica and Robusta beans from the rich volcanic soils of Indonesia. Our journey begins with meticulous selection, working closely with local farmers who share our commitment to sustainable and ethical practices. This direct trade approach ensures fair compensation for their hard work and fosters a thriving coffee community.
-                    </p>
+Our Company is backed by reputable and well experienced team that ensures the market conveniently accessed and get the best quality coffee from the source at the right time. We promote working closely with farmers to ensure the production of high quality coffee. We strongly believe our passion to the business, quality control system and service commitment to our clients to enable them get the best coffee.                    </p>
                     <p class="mb-4">
-                        Once harvested, our beans undergo a rigorous quality control process, from initial sorting to expert cupping sessions. We pride ourselves on our precise roasting techniques, which are carefully calibrated to bring out the unique flavor profiles inherent in each bean. Whether it's the bright acidity of our Arabica or the robust body of our Robusta, every batch is crafted to perfection, ready to delight coffee enthusiasts around the world.
-                    </p>
+Our Mission <br>
+Our mission is YOU - our clients! We sweat day and night to deliver the best coffee product Ethiopia offers to satisfy you 100%.                    </p>
                     <p>
-                        Our commitment extends beyond quality to global reach. We employ streamlined logistics to ensure our premium Indonesian coffee reaches international markets efficiently and fresh. From our farms to your cup, CV Putra Karo Mandiri represents a blend of tradition, innovation, and unwavering dedication to the art of coffee.
-                    </p>
+Our Vision <br>
+Our vision is to be the best coffee exporting company from the land of coffee origin, Ethiopia, to the rest of the world.   <br>
+Our Values <br>
+We prioritize dedication and quality! We work to lead the coffee export industry with unwavering and wholesome work culture.                 </p>
                     <!-- SHOW LESS Button - now styled like READ MORE -->
                     <button id="closeBtn" class="flex items-center justify-center space-x-2 bg-teal-700 text-white px-5 py-2.5 rounded-md text-sm font-semibold shadow-md hover:bg-stone-800 transition mt-8 mx-auto lg:mx-0">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -656,15 +657,12 @@
             <div class="flex flex-col items-center md:items-start text-center md:text-left">
                 <!-- Company Logo and Name -->
                 <div class="">
-                    <img src="/pictures/Logo (1).png" alt="CV Putra Karo Mandiri Logo" class=" h-12  mb-2">
-                    <p class="text-lg font-semibold">CV PUTRA KARO MANDIRI</p>
+                    <img src="/pictures/Logo (1).png" alt="EastSide Agro Industry Logo" class=" h-12  mb-2">
+                    <p class="text-lg font-semibold">EastSide Agro Industry /p>
                     <p class="text-xs">Indonesian Coffee Exporter</p>
                     <p class="text-xs text-gray-200">Green Beans & Roasted Beans</p>
                 </div>
-                <p class="text-xs text-gray-200 leading-relaxed">
-                    CV Putra Karo Mandiri is a coffee producer in Medan specializing in premium Arabica and Robusta beans
-                    sourced from Indonesia's finest regions for local and international markets.
-                </p>
+                
             </div>
 
             <!-- Kontak Section -->
@@ -731,7 +729,7 @@
 
         <!-- Copyright Info (hidden on small screens, shown on medium and up) -->
         <div class="hidden md:block p-9 text-white text-xs">
-            Copyright © CV Putra Karo Mandiri. All Rights Reserved. Designed & Developed by Yodeco.
+            Copyright © EastSide Agro Industry. All Rights Reserved. Designed & Developed by Gravity.
         </div>
 
         
