--- a/index.html
+++ b/index.html
@@ -657,44 +657,48 @@ We prioritize dedication and quality! We work to lead the coffee export industry
             <div class="flex flex-col items-center md:items-start text-center md:text-left">
                 <!-- Company Logo and Name -->
                 <div class="">
-                    <img src="/pictures/Logo (1).png" alt="EastSide Agro Industry Logo" class=" h-12  mb-2">
-                    <p class="text-lg font-semibold">EastSide Agro Industry /p>
-                    <p class="text-xs">Indonesian Coffee Exporter</p>
-                    <p class="text-xs text-gray-200">Green Beans & Roasted Beans</p>
+                    <img src="/pictures/Logo (1).png" alt="EastSide Agro Industry Logo" class=" h-12 pl-10 md:p-0 mb-2">
+                    <p class="text-lg font-semibold">EastSide Agro Industry </p>
+                    <p class="text-xs text-teal-200" style="opacity: 90%;">We Deal, We Deliver !!
+
+
+</p>
+                    <p class="text-xs text-gray-200">Ethiopian Coffee Exporter!</p>
                 </div>
                 
             </div>
 
             <!-- Kontak Section -->
             <div class="flex flex-col items-center md:items-start text-center md:text-left">
-                <h3 class="text-sm font-semibold mb-4 border-b-2 border-white pb-1">Kontak</h3>
+                <h3 class="text-sm font-semibold mb-4 border-b-2 border-white pb-1">Contact</h3>
                 <div class="flex items-center mb-2">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                     </svg>
-                    <span class="text-xs text-gray-200">+62 821-3906-5051</span>
+                    <span class="text-xs text-gray-200">+251 911752727 <br>
++251 118722117</span>
                 </div>
                 <div class="flex items-center mb-2">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-2 2V18a2 2 0 01-2 2H7a2 2 0 01-2-2V10m0-2l.93-1.85A2 2 0 016.92 5h10.16a2 2 0 011.99 1.15L21 8" />
                     </svg>
-                    <span class="text-xs text-gray-200">putrakaromandiri09@gmail.com</span>
+                    <span class="text-xs text-gray-200">info@eastsideagroindustry.com <br>
+bizuhan@eastsideagroindustry.com</span>
                 </div>
                 <div class="flex items-start">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-200 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M17.657 16.727A8 8 0 016.343 7.273L12 2l5.657 5.273a8 8 0 010 9.454zM12 13a3 3 0 100-6 3 3 0 000 6z" />
                     </svg>
                     <address class="text-xs text-gray-200 not-italic">
-                        Jl. Pailang Merah No.46, Kesawan <br>
-                        Kec. Medan Baru, Kota Medan <br>
-                        Sumatera Utara 20111
+                     Kirkos Sub-city, Wello Sefer, <br>
+Martreza Bldg. 1st floor, R-101
                     </address>
                 </div>
             </div>
 
             <!-- Alamat Section (Map) -->
             <div class="flex flex-col items-center md:items-start text-center md:text-left">
-                <h3 class="text-sm font-semibold mb-4 border-b-2 border-white pb-1">Alamat</h3>
+                <h3 class="text-sm font-semibold mb-4 border-b-2 border-white pb-1">Map</h3>
                 <div class="w-full h-48 bg-gray-300 rounded-lg overflow-hidden">
                     <!-- Embedded Google Map for Sengatera, Ethiopia -->
                     <iframe
@@ -713,18 +717,18 @@ We prioritize dedication and quality! We work to lead the coffee export industry
         <footer class="w-full bg-custom-blue p-4 flex items-center justify-between relative">
         <!-- Left-aligned circular button/logo -->
         <div class="flex items-center">
-            <button class="w-10 h-8 rounded-full bg-[#8B6B4F] flex items-center justify-center text-white text-lg font-bold shadow-md">
+            <a href="#"><button class="w-10 h-8 rounded-full bg-[#8B6B4F] flex items-center justify-center text-white text-lg font-bold shadow-md">
                 ^
-            </button>
+            </button></a>
         </div>
 
         <!-- Navigation Links (hidden on small screens, shown on medium and up) -->
         <nav class="hidden md:flex space-x-8 text-white text-sm font-medium">
             <a href="#" class="hover:underline  text-xs">Home</a>
-            <a href="#" class="hover:underline text-xs">About Us</a>
-            <a href="#" class="hover:underline text-xs">Product</a>
-            <a href="#" class="hover:underline text-xs">Blog</a>
-            <a href="#" class="hover:underline text-xs">Contact</a>
+            <a href="#about" class="hover:underline text-xs">About Us</a>
+            <a href="#products" class="hover:underline text-xs">Product</a>
+            <a href="#gallery" class="hover:underline text-xs">gallery</a>
+            <a href="#contact" class="hover:underline text-xs">Contact</a>
         </nav>
 
         <!-- Copyright Info (hidden on small screens, shown on medium and up) -->
