--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ We prioritize dedication and quality! We work to lead the coffee export industry
             <!-- Right Side: Image and "since 2017" bubble -->
             <svg width="0" height="0">
                 <clipPath id="custom-shape" clipPathUnits="objectBoundingBox">
-                    <path d="M 0.15, 0.4 C 0.1,-0.01 0.7,-0.01 0.83,0.05 C 1.05,0.2 0.85,0.99 0.91,0.7 C 0.88 ,1.05 0.3, 0.771 0.5 ,0.85 C -0.1,0.7 -0.06,0.3 0.15,0.2 z"></path>
+                    <path d="M 0.15, 0.4 C 0.1,-0.01 0.7,-0.01 0.83,0.05 C 1.05,0.2 0.85,0.99 0.91,0.7 C 0.88 ,1.05 0.3, 0.775 0.5 ,0.85  C -0.1,0.7 -0.06,0.3 0.15,0.2 z"></path>
                 </clipPath>
             </svg>
 
@@ -227,56 +227,56 @@ Our production team produces the main brands of coffee for the world which fulfi
     <!-- Bean 1 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">01</div>
-        <img src="/pictures/beans1.jpg" alt="Yirgachefe Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Yirgachefe.webp" alt="Yirgachefe Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Yirgachefe</h4>
         <p class="text-gray-600 sm:text-xs">Citrus and Floral Flavor, Fine Acidity and Body, 1770 to 2200m Altitude.</p>
     </div>
     <!-- Bean 2 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">02</div>
-        <img src="/pictures/beans1.jpg" alt="Jimma Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Jimma.jpg" alt="Jimma Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Jimma</h4>
         <p class="text-gray-600 sm:text-xs">Hard Balanced Flavor – Fair Light Acidity & Good Heavy Body, 1400 to 1800m Altitude.</p>
     </div>
     <!-- Bean 3 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">03</div>
-        <img src="/pictures/beans1.jpg" alt="Sidama Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Sidama.jpg" alt="Sidama Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Sidama</h4>
         <p class="text-gray-600 sm:text-xs">Sweet and Spicy Flavor, Balanced Acidity and Body, 1400 to 2200m Altitude.</p>
     </div>
     <!-- Bean 4 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">04</div>
-        <img src="/pictures/beans1.jpg" alt="Harar Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Harar.jpg" alt="Harar Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Harar</h4>
         <p class="text-gray-600 sm:text-xs">Mocha Flavor, Medium to Light Acidity, 1510 to 2120m Altitude.</p>
     </div>
     <!-- Bean 5 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">05</div>
-        <img src="/pictures/beans1.jpg" alt="Bebeka Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Bebeka.png" alt="Bebeka Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Bebeka</h4>
         <p class="text-gray-600 sm:text-xs">Large, Thick, and Pointed End, Light Acidity & Medium to Good Body, 950 to 1285m Altitude.</p>
     </div>
     <!-- Bean 6 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">06</div>
-        <img src="/pictures/beans1.jpg" alt="Limmu Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Limmu.webp" alt="Limmu Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Limmu</h4>
         <p class="text-gray-600 sm:text-xs">Wine Flavor (Well Balanced Cup), Medium Acidity and Body, 1400 to 2100m Altitude.</p>
     </div>
     <!-- Bean 7 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">07</div>
-        <img src="/pictures/beans1.jpg" alt="Gujji Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Gujji.webp" alt="Gujji Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Gujji</h4>
         <p class="text-gray-600 sm:text-xs">Sweet and Spicy Flavor, Balanced Acidity & Body, 1400 to 2200m Altitude.</p>
     </div>
     <!-- Bean 8 -->
     <div class="flex flex-col items-center text-center">
         <div class="numbered-circle">08</div>
-        <img src="/pictures/beans1.jpg" alt="Nekemt Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
+        <img src="/products/Nekemt.jpg" alt="Nekemt Beans" class="w-28 h-28 sm:w-32 sm:h-32 rounded-full object-cover mb-3 shadow-md">
         <h4 class="font-bold text-gray-800 text-xs sm:text-xs mb-1">Nekemt</h4>
         <p class="text-gray-600 sm:text-xs">Fruit Flavor and Medium Body, Medium to Pointed Acidity, 1770 to 2200m Altitude.</p>
     </div>
@@ -774,7 +774,7 @@ Our production team produces the main brands of coffee for the world which fulfi
        <!-- Call to Action Section -->
     <section id="contact" class=" px-0 sm:px-2 lg:px-2">
         <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between text-white text-center lg:text-left">
-            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6 lg:mb-0 max-w-2xl">
+            <h2 class="text-base sm:text-3xl md:text-4xl font-bold mb-6 lg:mb-0 max-w-2xl">
                 We deliver the perfect coffee experience for every coffee enthusiast.
             </h2>
             <a href="tel:+251 911752727" class="cta-button text-white px-8 py-4 rounded-full font-semibold shadow-lg text-base sm:text-lg flex items-center space-x-3 transform hover:scale-105">
