--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-4 text-white">
-                    <a href="#" class="px-2 py-1 text-xs hover:underline">Home</a>
-                    <a href="#about" class="hover:text-blue-400 transition text-xs">About</a>
+                    <a href="#" class="px-2 py-1 text-xs hover:text-green-500">Home</a>
+                    <a href="#about" class="hover:text-green-500 transition text-xs">About</a>
                     <div class="relative group">
-                        <a href="#products" class="flex items-center hover:text-blue-400 transition text-xs">
+                        <a href="#products" class="flex items-center hover:text-green-500 transition text-xs">
                             Products
                         </a>
                     </div>
-                    <a href="#gallery" class="hover:text-blue-400 transition text-xs ">Gallery</a>
-                    <a href="#contact" class="hover:text-blue-400 transition text-xs ">Contact us </a>
+                    <a href="#gallery" class="hover:text-green-500 transition text-xs ">Gallery</a>
+                    <a href="#contact" class="hover:text-green-500 transition text-xs ">Contact us </a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -57,12 +57,12 @@
                         </svg>
                     </button>
                 </div>
-                <div class="flex flex-col items-center justify-center p-12 h-full text-white text-lg space-y-8">
-                    <a href="#" class="hover:text-blue-400 transition text-xl py-2 w-full text-center">Home</a>
-                    <a href="#about" class="hover:text-blue-400 transition text-xl py-2 w-full text-center">About</a>
-                    <a href="#products" class="hover:text-blue-400 transition text-xl py-2 w-full text-center">Products</a>
-                    <a href="#gallery" class="hover:text-blue-400 transition text-xl py-2 w-full text-center">Gallery</a>
-                    <a href="#contact" class="hover:text-blue-400 transition text-xl py-2 w-full text-center">Contact us</a>
+                <div class="flex flex-col items-center justify-start p-12 h-full text-white text-lg space-y-8">
+                    <a href="#" class="hover:text-green-500 transition text-xl py-2 w-full text-center">Home</a>
+                    <a href="#about" class="hover:text-green-500 transition text-xl py-2 w-full text-center">About</a>
+                    <a href="#products" class="hover:text-green-500 transition text-xl py-2 w-full text-center">Products</a>
+                    <a href="#gallery" class="hover:text-green-500 transition text-xl py-2 w-full text-center">Gallery</a>
+                    <a href="#contact" class="hover:text-green-500 transition text-xl py-2 w-full text-center">Contact us</a>
                 </div>
             </div>
         </nav>
@@ -85,9 +85,9 @@
                             Read More
                         </button>
                         <!-- Button with blue background and full rounded corners -->
-                        <button class="cbutton text-white px-6 py-2 rounded-full text-sm font-semibold shadow-md hover:bg-gray-100 hover:text-gray-900 transition">
+                        <a href="#contact"><button class="cbutton text-white px-6 py-2 rounded-full text-sm font-semibold shadow-md hover:bg-gray-100 hover:text-gray-900 transition">
                             Contact Us
-                        </button>
+                        </button></a>
                     </div>
                 </div>
             </div>
