--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                             Read More
                         </button>
                         <!-- Button with blue background and full rounded corners -->
-                        <a href="#contact"><button class="cbutton text-white px-6 py-2 rounded-full text-sm font-semibold shadow-md hover:bg-gray-100 hover:text-gray-900 transition">
-                            Contact Us
-                        </button></a>
+                        <button class="cbutton text-white px-6 py-2 rounded-full text-sm font-semibold shadow-md hover:bg-gray-100 hover:text-gray-900 transition">
+                            <a href="#contact">Contact Us</a> 
+                        </button>
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@ We prioritize dedication and quality! We work to lead the coffee export industry
                 </div>
                 <div class="flex flex-col sm:flex-row justify-center lg:justify-start space-y-3 sm:space-y-0 sm:space-x-3 mt-6">
                     <!-- Read More Button -->
-                    <button id="readMoreBtn" class="flex items-center justify-center space-x-2 bg-teal-700 text-white px-5 py-2.5 rounded-md text-sm font-semibold shadow-md hover:bg-stone-800 transition">
+                    <button id="readMoreBtn" class="flex items-center justify-center space-x-2 bg-green-600 text-white px-5 py-2.5 rounded-md text-sm font-semibold shadow-md hover:bg-stone-800 transition">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                         </svg>
