--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ Our production team produces the main brands of coffee for the world which fulfi
             showMoreButtonContainer.id = 'showMoreContainer';
             showMoreButtonContainer.className = 'col-span-full flex justify-center mt-4';
             showMoreButtonContainer.innerHTML = `
-                <button id="showMoreBtn" class="bg-teal-500 text-white font-bold py-3 px-8 rounded-lg shadow-md hover:bg-teal-600 transition-colors duration-300 transform hover:scale-105">
+                <button id="showMoreBtn" class="bg-green-500 text-white font-bold py-3 px-8 rounded-lg shadow-md hover:bg-teal-600 transition-colors duration-300 transform hover:scale-105">
                     Show More
                 </button>
             `;
@@ -781,7 +781,7 @@ Our production team produces the main brands of coffee for the world which fulfi
             <h2 class="text-base sm:text-3xl md:text-4xl font-bold mb-6 lg:mb-0 max-w-2xl">
                 We deliver the perfect coffee experience for every coffee enthusiast.
             </h2>
-            <a href="tel:+251 911752727" class="cta-button text-white px-8 py-4 rounded-full font-semibold shadow-lg text-base sm:text-lg flex items-center space-x-3 transform hover:scale-105">
+            <a href="tel:+251 911752727" class="cta-button  text-white px-8 py-4 rounded-full font-semibold shadow-lg text-base sm:text-lg flex items-center space-x-3 transform hover:scale-105">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-11a1 1 0 01-1-1v-12z" />
                 </svg>
@@ -799,7 +799,7 @@ Our production team produces the main brands of coffee for the world which fulfi
                 <div class="">
                     <img src="/pictures/Logo (1).png" alt="EastSide Agro Industry Logo" class=" h-12 pl-10 md:p-0 mb-2">
                     <p class="text-lg font-semibold">EastSide Agro Industry </p>
-                    <p class="text-xs text-teal-200" style="opacity: 90%;">We Deal, We Deliver !!
+                    <p class="text-xs text-green-500" style="opacity: 90%;">We Deal, We Deliver !!
 
 
 </p>
